# cci

./: .gitignore  CMakeLists.txt
CMake/: CCIConfig.cmake.in  CMakeLists.txt  FindLTDL.cmake  configure.h.in
src/: CMakeLists.txt
src/api/: CMakeLists.txt
src/plugins/: CMakeLists.txt
src/tests/: CMakeLists.txt
src/util/: CMakeLists.txt
